2006-10-18  Kenichi Handa  <handa@m17n.org>

	* input.c (delete_surrounding_text): Be sure to set members
	preceding_text and following_text to NULL.
	(shift_state): Save variable values in ic_info->vars_saved.
	(preedit_commit): Don't print debug information here.  Don't
	change ic_info->keys here.
	(get_candidate_list): Don't ref plist.
	(take_action_list): Don't unref return value of
	get_candidate_list.  For undo, reset ic->produced and recover
	ic_info->vars.  Be sure to set ic->candidate_list to NULL after
	unref it.
	(init_ic_info): Set ic_info->vars_saved.
	(fini_ic_info): Unref ic_info->vars_saved.
	(re_init_ic): Be sure to set ic->candidate_list to NULL after
	unref it.
	(filter): Be sure to set members preceding_text and following_text
	to NULL.  Print debug information about produced text.  Delete
	processed keys from ic_info->keys.

	* input.h (MInputContextInfo): New member vars_saved.

2006-10-16  Kenichi Handa  <handa@m17n.org>

	* database.c (mdatabase__update): Fix the way to get db_info.

2006-10-02  Kenichi Handa  <handa@m17n.org>

	* font.h (struct MFont): New member `multiple_sizes'.  Bit-size of
	`size' changed to 24.

	* font.c (xlfd_unparse_name): Adjusted for the change of
	MFont->size.
	(font_score): Likewise.
	(mfont__set_spec_from_face): Set spec->multiple_sizes to 0.

	* m17n-X.c (MFontX, _MFontX): Deleted.
	(SET_SIZE, HAVE_SIZE): Deleted.
	(free_display_info): Adjusted for the change of
	disp_info->font_list format.
	(xfont_registry_list): Likewise.
	(xfont_open): Likewise.
	(xfont_list): Likewise.
	(xfont_encode_char): Ignore size to find a realized font.
	(MRealizedFontXft): Change the order of members to make it
	compatible with MRealizedFontFT.

2006-09-27  Kenichi Handa  <handa@m17n.org>

	* font.c (mfont_match_p, mfont_open, mfont_encapsulate)
	(mfont_close): Add comments.

	* mtext-lbrk.c (mtext_line_break): Add comment.

2006-09-26  Kenichi Handa  <handa@m17n.org>

	* input.c (minput_get_description): Handle description about